--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "rehype-pretty-code": "^0.12.3",
-    "shiki": "^0.14.7"
+    "shiki": "^0.14.7",
+    "shikiji": "^0.9.11"
   },
   "devDependencies": {
     "@types/node": "^20",
