--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "rehype-pretty-code": "^0.12.3",
     "shiki": "^0.14.7",
     "shikiji": "^0.9.11"
