--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@tailwindcss/typography": "^0.5.10",
     "contentlayer": "^0.3.4",
     "crypto": "^1.0.1",
+    "github-slugger": "^2.0.0",
     "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "rehype-pretty-code": "^0.12.3",
+    "rehype-slug": "^6.0.0",
     "shiki": "^0.14.7",
     "shikiji": "^0.9.11"
   },
