--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-gist": "^1.2.4",
     "recoil": "^0.7.7",
     "rehype-pretty-code": "^0.12.3",
     "rehype-slug": "^6.0.0",
