--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recoil": "^0.7.7",
     "rehype-pretty-code": "^0.12.3",
     "rehype-slug": "^6.0.0",
+    "remark-gfm": "3.0.1",
     "shiki": "^0.14.7",
     "shikiji": "^0.9.11"
   },
