--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "react-dom": "^18",
     "react-gist": "^1.2.4",
     "recoil": "^0.7.7",
+    "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.12.3",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "3.0.1",
+    "remark-latex": "^0.12.12",
+    "remark-math": "^6.0.0",
     "shiki": "^0.14.7",
     "shikiji": "^0.9.11"
   },
